# noe

./: .gitignore  Cargo.toml  README.md  pyproject.toml
examples/: README.md
examples/benches-stm32f103c8/: Cargo.toml  README.md
examples/benches-stm32f103c8/src/: add.rs  batchnorm2d.rs  conv2d.rs  linear.rs  main.rs
examples/cnn/: Cargo.toml  build.rs  main.py
examples/cnn/model/: cnn.onnx  cnn_fused.onnx  net.py
examples/cnn/src/: dataset.rs  main.rs
examples/gesture-host/: Cargo.toml  build.rs
examples/gesture-host/model/: net.py
examples/gesture-host/src/: dataset.rs  main.rs
examples/gesture-stm32f103c8/: Cargo.toml  build.rs  main.py
examples/gesture-stm32f103c8/.cargo/: config.toml
examples/gesture-stm32f103c8/model/: dataset.py
examples/gesture-stm32f103c8/src/: main.rs  mpu6050.rs
examples/kws/: Cargo.toml  build.rs  main.py
examples/kws/model/: dataset.py  net.py
examples/kws/src/: dataset.rs  decoder.rs  main.rs
examples/kws/src/mfcc/: mel_spectrogram.rs  melscale.rs  melscale_fbanks.rs  mfcc.rs  mod.rs  spectrogram.rs  stft.rs
examples/lenet/: Cargo.toml  build.rs  main.py
examples/lenet/lenet_params/: model.json
examples/lenet/model/: lenet.onnx  lenet_fused.onnx  net.py
examples/lenet/src/: main.rs
examples/mlp/: Cargo.toml  build.rs  main.py
examples/mlp/mlp_params/: model.json
examples/mlp/model/: dataset.py  mlp.onnx  mlp_fused.onnx  net.py
examples/mlp/src/: generated.rs  main.rs
noe/: Cargo.toml
noe-util/: Cargo.toml
noe-util/src/: lib.rs  types.rs  utils.rs
noe/benches/: add.rs  batchnorm2d.rs  conv1d.rs  conv2d.rs  linear.rs  maxpool1d.rs  maxpool2d.rs
noe/benches/common/: mod.rs
noe/src/: lib.rs
noe/src/backend/: add.rs  batchnorm2d.rs  conv1d.rs  conv2d.rs  linear.rs  maxpool1d.rs  maxpool2d.rs  mod.rs
noe/src/basic/: mat_vec_mul.rs  mod.rs
noe/src/layer/: add.rs  batchnorm2d.rs  conv1d.rs  conv2d.rs  linear.rs  maxpool1d.rs  maxpool2d.rs  mod.rs
tools/: __init__.py  dump.py  fusion.py  parser.py  planner.py  util.py
