[workspace]
members = [
    "noe",
    "noe-util",
    "examples/mlp",
    "examples/lenet",
    "examples/cnn",
]
resolver = "3"

[workspace.package]
authors = ["LinkWanna"]
license = "MIT"
version = "0.2.2"
edition = "2024"
readme = "README.md"

keywords = ["AI", "Embedded", "no-std"]
categories = ["Embedded"]
