[workspace]
members = [
    "noe",
    "noe-util",
    "examples/mlp",
    "examples/lenet",
    "examples/cnn",
    "examples/gesture-host",
    "examples/gesture-stm32f103c8",
    "examples/kws",
]
resolver = "3"

[workspace.package]
authors = ["LinkWanna <lillluckenwp590@gmail.com>"]
license = "MIT"
version = "0.3.4"
edition = "2024"
readme = "README.md"

keywords = ["AI", "Embedded", "fixed-point", "no-std"]
categories = ["embedded", "no-std", "algorithms"]
