[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[project]
name = "noe"
version = "0.2.1"
description = "A quantization tool for embedded AI inference."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # quantization
    "onnx>=1.19.0",
    "onnxoptimizer>=0.4.2",
    "onnxscript>=0.5.0",
    "ortools>=9.14.6206",
    "numpy>=1.26.4",
    # tools
    "rich>=14.3.3",
    "torchinfo>=1.8.0",
]
