[package]
name = "noe-util"
workspace = ".."
description = "A quantization tool for embedded AI inference."


edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pathdiff = "0.2"
