[package]
name = "noe"
workspace = ".."
description = "A AI inference library for embedded devices."

edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["truncate"]

truncate = []
