[package]
name = "noe"
workspace = ".."
description = "A AI inference library for embedded devices."

edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["truncate"]

truncate = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "add"
harness = false

[[bench]]
name = "linear"
harness = false

[[bench]]
name = "conv1d"
harness = false

[[bench]]
name = "conv2d"
harness = false

[[bench]]
name = "maxpool1d"
harness = false

[[bench]]
name = "maxpool2d"
harness = false

[[bench]]
name = "batchnorm2d"
harness = false
