[package]
name = "benches-stm32f103c8"
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
noe = { path = "../../noe" }
embassy-stm32 = { version = "0.6.0",  features = [ "defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-sync = { version = "0.8.0",  features = ["defmt"] }
embassy-executor = { version = "0.10.0",  features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.1",  features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { version = "0.1.2"}

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.9", default-features = false }
nb = "1.0.0"
static_cell = "2.0.0"
mpu6050-dmp = { version = "0.6.1", features = ["async"] }

[build-dependencies]
noe-util = { path = "../../noe-util" }

[features]
default = ["add", "linear"]
add = []
linear = []

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
overflow-checks = false
lto = "fat"
